added new main.css + font-sourcesanspro.css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url(font-awesome.min.css);
-@import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:200");
+@import url(font-sourcesanspro.css);
 
 /*
 	Visualize by TEMPLATED
@@ -2789,19 +2789,18 @@
 	color: black;
 	font-size: 18px;
 	font-weight: 600;
-	display: inline-block;
+	text-align: center;
 }
 	
 	#about .bioleft
 	{
-		text-align: justify;
-		margin: -13em 20em 5em 36em;
+		margin: -15em 20em 5em 36em;
 		display: inline-block;
 	}
 	
 	#about .left 
 	{
-		margin: 0 0 0 18em;
+		margin: 0 40em 0 0;
 		width: 300px;
 		height: 300px;
 		display: inline-block;
@@ -2810,13 +2809,13 @@
 	#about .bioright
 	{
 		text-align: justify;
-		margin: -13em 40em 5em 20em;
+		margin: -15em 40em 5em 20em;
 		display: inline-block;
 	}
 	
 	#about .right 
 	{
-		margin: 0 0 0 64em;
+		margin: 0 0 0 50em;
 		width: 300px;
 		height: 300px;
 	}
